fixes for radix dialog and add overflow-y scrollbar

--- a/client/src/shared/styles/global.css
+++ b/client/src/shared/styles/global.css
@@ -1,3 +1,4 @@
+/** biome-ignore-all lint/complexity/noImportantStyles: ignore */
 @import "tailwindcss";
 
 :root {
@@ -13,6 +14,22 @@
 
   --text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.6);
   --without-theme: white;
+}
+
+html {
+  overflow-y: scroll;
+}
+
+body {
+  margin: 0;
+  background-color: var(--background);
+  color: var(--text);
+  font-family: "JetBrains Mono", sans-serif;
+}
+
+html body[data-scroll-locked] {
+  --removed-body-scroll-bar-size: 0 !important;
+  margin-right: 0 !important;
 }
 
 [data-theme="light"] {
@@ -475,13 +492,6 @@
   --button-hover-bg: hsl(var(--accent-hue), 70%, 30%);
   --border: hsl(var(--accent-hue), 60%, 40%);
   --border-disabled: hsl(var(--accent-hue), 60%, 20%);
-}
-
-body {
-  margin: 0;
-  background-color: var(--background);
-  color: var(--text);
-  font-family: "JetBrains Mono", sans-serif;
 }
 
 @keyframes scroll-diagonal-switch {
